prototype - responsive carousel

--- a/compilerconfig.json
+++ b/compilerconfig.json
@@ -2,5 +2,9 @@
   {
     "outputFile": "css/main.css",
     "inputFile": "css/main.scss"
+  },
+  {
+    "outputFile": "css/prototype.css",
+    "inputFile": "css/prototype.scss"
   }
 ]
