off canvas tweaks

--- a/bundleconfig.json
+++ b/bundleconfig.json
@@ -4,5 +4,11 @@
     "inputFiles": [
       "index.html"
     ]
+  },
+  {
+    "outputFileName": "js/modernizer-custom.js",
+    "inputFiles": [
+      "js/modernizer-custom.js"
+    ]
   }
 ]
