--- a/Web.config
+++ b/Web.config
@@ -1,9 +1,22 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <configuration>
 
     <system.web>
       <compilation debug="true" targetFramework="4.0" />
     </system.web>
-
+    <system.webServer>
+        <rewrite>
+            <rules>
+                <rule name="Alias" stopProcessing="true">
+                    <match url=".*" />
+                    <conditions>
+                        <add input="{HTTP_HOST}" pattern="sandbox.com:8888" />
+                    </conditions>
+                    <action type="Rewrite" url="/dist/{R:0}" />
+                </rule>
+            </rules>
+        </rewrite>
+    </system.webServer>
+  
 </configuration>
