splitting out site nav into media specific files.
... not sure about it

--- a/compilerconfig.json
+++ b/compilerconfig.json
@@ -12,6 +12,10 @@
     "inputFile": "scss/pages/main-tablet.scss"
   },
   {
+    "outputFile": "dist/css/main-desktop.css",
+    "inputFile": "scss/pages/main-desktop.scss"
+  },
+  {
     "outputFile": "dist/css/off-canvas.css",
     "inputFile": "scss/pages/off-canvas.scss"
   },
