--- a/Web.config
+++ b/Web.config
@@ -17,6 +17,25 @@
                 </rule>
             </rules>
         </rewrite>
+      <httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files">
+        <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" />
+          <dynamicTypes>
+            <add mimeType="text/*" enabled="true" />
+            <add mimeType="message/*" enabled="true" />
+            <add mimeType="application/javascript" enabled="true" />
+            <add mimeType="*/*" enabled="false" />
+          </dynamicTypes>
+        <staticTypes>
+          <add mimeType="text/*" enabled="true" />
+          <add mimeType="message/*" enabled="true" />
+          <add mimeType="application/javascript" enabled="true" />
+          <add mimeType="*/*" enabled="false" />
+        </staticTypes>
+      </httpCompression>
+      <urlCompression doStaticCompression="true" doDynamicCompression="true" />
+      <staticContent>
+        <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="10.00:00:00" />
+      </staticContent>
     </system.webServer>
   
 </configuration>
