--- a/bundleconfig.json
+++ b/bundleconfig.json
@@ -6,6 +6,12 @@
     ]
   },
   {
+    "outputFileName": "dist/nav-pure-css.html",
+    "inputFiles": [
+      "_nav-pure-css.html"
+    ]
+  },
+  {
     "outputFileName": "dist/off-canvas.html",
     "inputFiles": [
       "_off-canvas.html"
